<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Video Info Viewer</string>
    <string name="action_select_video">Select Video</string>
    <string name="action_credits">Credits</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="view_video_info">View Video Info</string>
    
    <string name="select_video">Select Video</string>
    <string name="recent_videos">Recent Videos</string>
    <string name="video_properties">Properties</string>
    
    <string name="key_file_name">Name:</string>
    <string name="key_file_path">Path:</string>
    <string name="key_frame_rate">Frame Rate:</string>
    <string name="key_format">Format:</string>
    <string name="key_format_profile">Format Profile:</string>
    <string name="key_codec_id">Codec ID:</string>
    <string name="key_file_size">File Size:</string>
    <string name="key_mimetype">MimeType:</string>
    <string name="key_duration">Duration:</string>
    <string name="key_resolution">Resolution:</string>
    <string name="key_bitrate">Bitrate:</string>
    <string name="key_date">Date:</string>
    
    <string name="play_description">Play and pause button</string>
    <string name="fullscreen_description">Fullscreen button</string>
    
    <string name="view_atom_structure">View Atom Structure</string>
    
    <string name="expand_box_icon_description">Expand Box Description</string>
    
    <string name="box_info_button_description">View Detailed Box Information</string>
    
    <string name="search_title">Search</string>
    <string name="search_hint">Search for property</string>
    
    <string name="apache_license_title">This software contains the following components licensed under Apache 2.0</string>
    
    <string name="mp4parser_title"> - <a href="https://code.google.com/p/mp4parser/">mp4parser</a></string>
    
    <string name="gson_title"> - <a href="https://code.google.com/p/google-gson/">Gson</a></string>
    
    <string name="icon_credit">Icon provided by <a href="http://dribbble.com/sok">Simeon K.</a></string>
    
    <string name="video_thumbnail_content_description">Thumbnail from video</string>
    
    <string name="onboarding_text">To get started, click here to select a video</string>
    
    <string name="onboarding_image_content_description">Onboarding arrow pointing at select video button</string>
    
    <string name="raw_data">Raw Data</string>
    
    <string name="bytes_key">Bytes:</string>
    
    <string name="string_key">String:</string>
    
</resources>
