<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">
    
    <LinearLayout
        android:id="@+id/credits_card"
        style="@style/CardLinearLayout"
        android:orientation="vertical">
        
        <com.roryhool.videoinfoviewer.views.RobotoTextView 
            android:id="@+id/icon_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/icon_credit"
            android:layout_marginTop="10dip"
            style="@style/CardTitle_T2" />

       <View
           android:layout_width="match_parent"
           android:layout_height="2px"
           android:layout_margin="10dip"
           android:background="@color/grey_lighter" />
        
        <com.roryhool.videoinfoviewer.views.RobotoTextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apache_license_title"
            style="@style/CardTitle_T2" />
        
        <com.roryhool.videoinfoviewer.views.RobotoTextView 
            android:id="@+id/mp4parser_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mp4parser_title"
            android:paddingLeft="5dp"
            style="@style/CardTitle_T2" />
        
        <com.roryhool.videoinfoviewer.views.RobotoTextView 
            android:id="@+id/gson_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gson_title"
            android:paddingLeft="5dp"
            style="@style/CardTitle_T2" />

	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2px"
	        android:layout_margin="10dip"
	        android:background="@color/grey_lighter" />
        
        <com.roryhool.videoinfoviewer.views.RobotoTextView 
            android:id="@+id/apache_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="10dip"
            style="@style/CardTitle_T4" />
        
    </LinearLayout>
    
</ScrollView>
